src/objects/Acxiom_Data__c.object
<CustomObject>
    <description>Collection of information pulled from Acxiom, an external vendor that provides financial data and other &apos;big data&apos; points on most anyone for whom we have some amount of identifiable information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Acxiom Data</relationshipLabel>
        <relationshipName>Acxiom_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acxiom_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether or not the record was added through a bulk import. False (default) for any record generated through our standard process of calling the Acxiom API (or erroring out through the same process).</description>
        <label>Acxiom Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <description>For debugging, intended to record the state of the Lead&apos;s fields at the time of the Acxiom request (if that field triggered an error).</description>
        <label>Error Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Request_ID__c</fullName>
        <label>Error Request ID</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Acxiom Data</relationshipLabel>
        <relationshipName>Acxiom_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acquiredAnIRA__c</fullName>
        <description>Likelihood to have acquired an IRA account in last 12 months</description>
        <label>acquiredAnIRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>acquiredAny401k__c</fullName>
        <description>Likelihood to have acquired a 401(k) in last 12 months</description>
        <label>acquiredAny401k</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>activeInvestments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates investors with average portfolios of greater than $150,000 and are active in the market</description>
        <label>activeInvestments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>affordabilityUS__c</fullName>
        <description>Provides a clear picture of household financial cushion and ability to afford spending</description>
        <label>affordabilityUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cushioned comfort</fullName>
                </value>
                <value>
                    <fullName>Keeping pace</fullName>
                </value>
                <value>
                    <fullName>No frills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>annuitiesAcquired__c</fullName>
        <description>Likelihood to have acquired annuities in the last twelve months</description>
        <label>annuitiesAcquired</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>anyInvestmentsAcquired__c</fullName>
        <description>Likelihood to have acquired any investments in the last twelve months</description>
        <label>anyInvestmentsAcquired</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>economicStabilityIndicator__c</fullName>
        <description>ESI is an easy to apply model score that is able to predict likely ITA (Invitation to Apply) approvals. Marketers can use ESI as a relative measure of likelihood that an ITA responder will go on to meet their credit approval standards</description>
        <label>economicStabilityIndicator</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>estimatedIncomeMax__c</fullName>
        <description>Estimated income maximum in dollars.</description>
        <label>estimatedIncomeMax</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>estimatedIncomeMin__c</fullName>
        <description>Estimated income minimum in dollars.</description>
        <label>estimatedIncomeMin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fullServiceInvestor__c</fullName>
        <description>Indicates likelihood individual will use the services of a full-service broker</description>
        <label>fullServiceInvestor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveA529SavingsPlan__c</fullName>
        <description>Likelihood of participating in a 529 plan</description>
        <label>haveA529SavingsPlan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveAnOnlineTradingAccount__c</fullName>
        <description>Likelihood of being an online trader with at least one successfully completed trade in the previous 12 months and having an active trading account</description>
        <label>haveAnOnlineTradingAccount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveAny401k__c</fullName>
        <description>Likelihood to have any 401(k) account</description>
        <label>haveAny401k</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveAnyAnnuities__c</fullName>
        <description>Likelihood to have any annuities</description>
        <label>haveAnyAnnuities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveAnyIRAAccount__c</fullName>
        <description>Likelihood to have any type of IRA account</description>
        <label>haveAnyIRAAccount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveAnyPrivatelyHeldSharesOfCompanies__c</fullName>
        <description>Likelihood to have any privately held shares of companies or partnerships</description>
        <label>haveAnyPrivatelyHeldSharesOfCompanies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>haveCorporateBondsOrDebentures__c</fullName>
        <description>Likelihood to have corporate bonds or debentures</description>
        <label>haveCorporateBondsOrDebentures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>housingInvestmentPropertiesOwned__c</fullName>
        <description>Estimated number of investment properties individual owns</description>
        <label>housingInvestmentPropertiesOwned</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>investingInterests__c</fullName>
        <description>Identifies the investing interests of the individual (One or more of the following, comma separated: Investing/Finance, Money seekers, Personal, Real estate, Stocks/Bonds, Foreign)</description>
        <label>investingInterests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investing/Finance</fullName>
                </value>
                <value>
                    <fullName>Money seekers</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Real estate</fullName>
                </value>
                <value>
                    <fullName>Stocks/Bonds</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>investmentServicesConsumerSegment__c</fullName>
        <description>Identifies the Investment Services consumer segment of the individual</description>
        <label>investmentServicesConsumerSegment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enviables</fullName>
                </value>
                <value>
                    <fullName>Affluent Couples &amp; Singles</fullName>
                </value>
                <value>
                    <fullName>Affluent Families w/Children</fullName>
                </value>
                <value>
                    <fullName>Affluent Pre-Retired</fullName>
                </value>
                <value>
                    <fullName>Mainstream Couples &amp; Singles</fullName>
                </value>
                <value>
                    <fullName>Mainstream Families w/Children</fullName>
                </value>
                <value>
                    <fullName>Mainstream Pre-Retired</fullName>
                </value>
                <value>
                    <fullName>Luxury Seniors</fullName>
                </value>
                <value>
                    <fullName>Comfortable Seniors</fullName>
                </value>
                <value>
                    <fullName>Restrained Seniors</fullName>
                </value>
                <value>
                    <fullName>Limiteds</fullName>
                </value>
                <value>
                    <fullName>Starting Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>investor__c</fullName>
        <description>Indicates likelihood individual is an investor</description>
        <label>investor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>lifestageCluster__c</fullName>
        <description>A 2 byte code from 01-70. Household-level segmentation system that places each U.S. household into one of 70 segments based on similar demographic, socio-economic, and consumer behavior</description>
        <label>lifestageCluster</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lifestageGroup__c</fullName>
        <description>These 21 groups provide a higher level aggregate of the 70 Personicx lifestage clusters consumer segments based on similar life stage characteristics</description>
        <label>lifestageGroup</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netWorthGoldMax__c</fullName>
        <description>Predicts the upper bound of the range in which a household&apos;s NetWorth is likely to fall.</description>
        <label>netWorthGoldMax</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netWorthGoldMin__c</fullName>
        <description>Predicts the lower bound of the range in which a household&apos;s NetWorth is likely to fall.</description>
        <label>netWorthGoldMin</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netWorthUltraAffluent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates households more likely to have a net worth of $3mm+</description>
        <label>netWorthUltraAffluent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ownsRealEstateProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates individual invests in real estate</description>
        <label>ownsRealEstateProperty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>retirementAssets__c</fullName>
        <description>A dollar value describing the propensity for total amount of retirement assets to include pension plans, 401k/403b accounts, employer sponsored pension plans, and IRA&apos;s.</description>
        <label>retirementAssets</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>selfDirectedInvestor__c</fullName>
        <description>Indicates likelihood individual is a self- directed investor</description>
        <label>selfDirectedInvestor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>stocksAndBondsInvestor__c</fullName>
        <description>Indicates likelihood individual invests in stocks and bonds</description>
        <label>stocksAndBondsInvestor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Likelihood_Scale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>totalLiquidInvestibleAssets__c</fullName>
        <description>A dollar value describing the propensity for the total minimum amount of liquid investable assets, not including retirement assets</description>
        <label>totalLiquidInvestibleAssets</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Acxiom Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Errors</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Message__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Error_Code__c</field>
            <operation>equals</operation>
        </filters>
        <label>Errors - No call to Acxiom</label>
    </listViews>
    <listViews>
        <fullName>Successful</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <columns>economicStabilityIndicator__c</columns>
        <columns>lifestageCluster__c</columns>
        <columns>lifestageGroup__c</columns>
        <columns>netWorthGoldMin__c</columns>
        <columns>netWorthUltraAffluent__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>retirementAssets__c</columns>
        <columns>acquiredAny401k__c</columns>
        <columns>acquiredAnIRA__c</columns>
        <columns>activeInvestments__c</columns>
        <columns>stocksAndBondsInvestor__c</columns>
        <columns>totalLiquidInvestibleAssets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Error_Message__c</field>
            <operation>equals</operation>
        </filters>
        <label>Successful</label>
    </listViews>
    <nameField>
        <displayFormat>Acxiom - {000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acxiom Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>